--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
 
-                                                        <!-- Matrix -->
     <script src="/JAVASCRIPT/matrix.js"></script>
 
     <header class="header">
@@ -60,10 +59,11 @@
             </p>
 
             <div class="home-sci">
-                <a href="https://github.com/SAI127001" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="https://www.linkedin.com/in/terukula-sai/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://wa.me/9987886552" target="_blank"><i class='bx bxl-whatsapp'></i></a>
-                <a href="https://www.instagram.com/sai_127.0.0.1/" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a href="https://github.com/imvyadaw" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/imvyadaw/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.instagram.com/im_vyadaw/" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.facebook.com/imvyadaw?mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook'></i></a>
+
             </div>
            <a href="" class="btn-box" download="Sai CV/Resume">Download CV</a>
         </div>
