--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Goodghost</title>
 
-    <link rel="icon" type="png|image" href="/IMAGES/v.png">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="icon" type="png|image" href="/image/v.png">
+    <link rel="stylesheet" href="/css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
 </head>
 <body>
 
-    <script src="/JAVASCRIPT/matrix.js"></script>
+    <script src="/javascript/matrix.js"></script>
 
     <header class="header">
         <a href="#" class="logo">{Portfolio} </a>
@@ -74,7 +74,7 @@
                 <span></span>
                 <span></span>
                 <div class="image">
-                    <img src="/IMAGES/saianon.png" alt="">
+                    <img src="/image/saianon.png" alt="">
                 </div>
             </div>
         </div>
