--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Portfolio | Goodghost</title>
 
     <link rel="icon" type="png|image" href="/image/v.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
 </head>
 <body>
 
-    <script src="/javascript/matrix.js"></script>
+    <script src="matrix.js"></script>
 
     <header class="header">
         <a href="#" class="logo">{Portfolio} </a>
@@ -66,7 +66,7 @@
                 <a href="https://www.facebook.com/imvyadaw?mibextid=ZbWKwL" target="_blank"><i class='bx bxl-facebook'></i></a>
 
             </div>
-           <a href="" class="btn-box" download="Sai CV/Resume">Download CV</a>
+           <!-- <a href="" class="btn-box" download="Sai CV/Resume">Download CV</a> -->
         </div>
 
         <div class="home-img">
